# solidos

./: CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.h
doc/: activityDiagram.puml  classDiagram.puml
src/: ___geometry.txt  ___geometry_cpp.txt  axis.cpp  axis.h  boundBox.cpp  boundBox.h  camera.cpp  camera.h  geometry.cpp  geometry.h  graphics.h  gui.cpp  gui.h  guiGeometry.cpp  guiGeometry.h  main.cpp  matrix.cpp  matrix.h  menu.cpp  menu.h  scene.cpp  scene.h  shaderProgram.cpp  shaderProgram.h  solids.cpp  solids.h  window.cpp  window.h
